--- a/TesteUPD8/appsettings.json
+++ b/TesteUPD8/appsettings.json
@@ -1,6 +1,6 @@
 {
   "ConnectionStrings": {
-    "DefaultConnection": "Server=(localdb)\\mssqllocaldb;Database=aspnet-TesteUPD8-AB5122E4-7CA4-4B11-973F-7BC708B61884;Trusted_Connection=True;MultipleActiveResultSets=true"
+    "DefaultConnection": "Integrated Security=SSPI;Persist Security Info=False;Initial Catalog=TesteUPD8;Data Source=DESKTOP-HRR35B9\\SQLEXPRESS"
   },
   "Logging": {
     "LogLevel": {
