--- a/TesteUPD8/appsettings.json
+++ b/TesteUPD8/appsettings.json
@@ -1,6 +1,6 @@
 {
   "ConnectionStrings": {
-    "DefaultConnection": "Integrated Security=SSPI;Persist Security Info=False;Initial Catalog=TesteUPD8;Data Source=DESKTOP-HRR35B9\\SQLEXPRESS"
+    "DefaultConnection": "Integrated Security=SSPI;Persist Security Info=False;Initial Catalog=TesteUPD8;Data Source=.\\SQLEXPRESS"
   },
   "Logging": {
     "LogLevel": {
